kubernetes/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: cloudops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

    spec:
      containers:
        - name: gateway

          image: cloudops-microservice-platform-gateway:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
