kubernetes/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudops-ingress
  namespace: cloudops

spec:
  ingressClassName: nginx

  rules:
    - host: cloudops.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: gateway-service

                port:
                  number: 80
